added new files in web dev section

--- a/data-analysis.html
+++ b/data-analysis.html
@@ -50,7 +50,7 @@
         </div>          
     </nav><!-- End of Page Navbar -->
 
-    <header id="home" class="header" style="background-image: url('assets/imgs/header-data.jpg');">
+    <header id="home" class="header" style="background-image: url('assets/imgs/header-alt.jpg');">
         <div class="overlay"></div>
         <div class="header-content container">
         </div>              
@@ -62,7 +62,7 @@
         <section class="section" id="blog">
             <!-- container -->
             <div class="container text-center">
-                <p class="section-subtitle text-light"><strong>Recent Projects</strong></p>
+                <p class="section-subtitle text-secondary"><strong>Recent Projects</strong></p>
                 <h6 class="section-title mb-6 text-light">Data Analysis</h6>
                 <!-- blog-wrapper -->
                 <div class="blog-card">
@@ -85,7 +85,7 @@
                         <h5 class="blog-card-title">This application is built on Python and Flask, and it leverages the power of Pandas and Plotly to provide historical data of the S&P 500.</h6>
                         <p><b>To do this, it uses the Pandas Datareader to connect to the Yahoo Finance API and apply various technical analysis tools. One of the standout features of this application is its interactive visualizations, which are made possible by Plotly. Users can easily view market bias and explore different trends. In addition, the website also offers a simple and profitable trading strategy known as Dual Momentum. The application also includes a table of various stock indices, grouped by their one-year rate of change. This table is updated daily and uses historical data sourced from Yahoo Finance API.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/market_bias_v2" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="market-bias.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -98,7 +98,7 @@
                         <p><b>To achieve this, the user inputs their desired parameters, and the application accesses the historical data for those instruments. Once the data is accessed, the app calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages provide a helpful indicator of the trend direction for each instrument.
                             The beauty of FastAPI is that it is designed to be performant and easy to use. It's lightweight, so it can handle heavy loads without sacrificing speed. And its intuitive design means that developers can quickly create APIs with minimal code.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/stooq-api" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://github.com/mjaroszewski1979/stooq-api" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -111,7 +111,7 @@
                         <p><b>In fact, Django's ORM is just a pythonical way to create SQL to query and manipulate your database and get results in a pythonic fashion. In this particular case users are able to view different trading strategies and related financial markets. After completing the registration subscribers can login and are now able to create their own investment strategy. To delete records from the database users need to be added to special group and granted permissions by the website administrator.
                             Static files are served with WhiteNoise to accomplish high performance and efficiency without depending on nginx, Amazon S3 or any other external service.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/quant-catalog" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://github.com/mjaroszewski1979/quant-catalog" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -124,7 +124,7 @@
                         <p><b>Its main function is to present current direction for selected financial markets. After completing the registration process users are gaining access to multiple instruments. This website is using pandas-datareader to fetch historical data from FRED. Before results are being displayed application is calculating very simple 12-month momentum formula to determine actual trend.
                             One of the most noteworthy features of this application is a highly adaptable and scalable workflow for structuring and configuring a production-grade structure using flask blueprints and the application factory pattern.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/trend_follower_v1" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://github.com/mjaroszewski1979/trend_follower_v1" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
