--- a/django-cars.html
+++ b/django-cars.html
@@ -63,19 +63,19 @@
             <!-- container -->
             <div class="container text-center">
                 <p class="section-subtitle text-secondary"><strong>Django Application</strong></p>
-                <h6 class="section-title mb-6 text-light">Global Macro</h6>
+                <h6 class="section-title mb-6 text-light">MJ Cars</h6>
                 <!-- blog-wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/global-macro.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/django-cars.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">Designed to offer a user-friendly and visually appealing interface that engages users with dynamic and interactive graphs.</h6>
-                        <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
-                            In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
+                        <h5 class="blog-card-title">This Django application provides users the option to register and authenticate with their Google account.</h6>
+                            <p><b>Once successfully logged in, users can create a customized list of their favorite cars and even upload images of their choice. One of the most noteworthy features of this application is the implementation of drag-and-drop reordering, which enables users to dynamically alter the order of elements in their list, which is then automatically reflected in the database.
+                                he integration of HTMX technology into this Django application ensures that the user experience is smooth and seamless. HTMX is a modern tool that simplifies the development process by allowing developers to create interactive web pages with minimal effort.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/django_global_macro" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
+                        <a href="https://github.com/mjaroszewski1979/django_car" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <h2>Features:</h2>
@@ -84,17 +84,19 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li><strong>Pandas-Datareader</strong> package makes it simple to access and read data from online sources such as the FRED API, and it guarantees accuracy when importing historical time series. </li>
-                                <br>
-                                <li><strong>Python's Threading Module</strong> enables developers to run multiple threads simultaneously within a program, providing faster and more efficient execution.</li>
-                                <br>
                                 <li>Utilizing <strong>template inheritance mechanism</strong> to create a visually appealing and user-friendly interface. This involves building a base template with common elements and defining blocks that child templates can override, allowing for a consistent and easily modifiable design.</li>
                                 <br>
                                 <li><strong>HTMX</strong> is a user-friendly library that simplifies the creation of highly dynamic and interactive web applications without requiring the use of complex JavaScript or CSS frameworks.</li>
                                 <br>
-                                <li>To serve static files with high performance and efficiency, you can use <strong>WhiteNoise</strong> - a Python library that caches files in memory, compresses them on the fly, and can be configured to use HTTPS.</li>
+                                <li>The <strong>LoginRequiredMixin</strong> is a Django security feature that requires users to authenticate themselves before accessing certain pages or functionalities. It helps prevent unauthorized access to sensitive information and ensures the security and privacy of the application and its users.</li>
                                 <br>
-                                <li><strong>Bokeh</strong> is an excellent Python library for creating visually appealing and easy-to-understand data visualizations, including line charts, bar plots, and hexagonal tiles for binned aggregations.</li>
+                                <li>My Django application includes a key feature that allows users to upload and access media files securely through <strong>Amazon S3 bucket</strong>. By using Amazon S3, we ensure that all media files are stored safely, easily accessible, and can easily scale to meet the growing demands of the application's users.</li>
+                                <br>
+                                <li>With the <strong>django-allauth</strong> package, users can log in and register using their social media accounts, like Google, simplifying the process and improving security.</li>
+                                <br>
+                                <li>Django's <strong>Cross-Site Request Forgery Protection</strong> works by using a unique token to validate each form submission on the server-side, and also includes other built-in security features like user authentication and authorization, password hashing, and SSL encryption to protect against common security threats.</li>
+                                <br>
+                                <li><strong>Sphinx-apidoc</strong> to automate the building of a well-organized module index with documentation links derived from docstrings, thus enhancing the user's experience. </li>
                                 <br>
                                 <li><strong>Breaking down logic into smaller parts</strong>: to achieve improved code organization, maintainability, and scalability, while also making it easier to debug and test individual parts of the codebase I have created smaller, focused Django applications within the project.</li>
                                 <br>
