--- a/golden-cross.html
+++ b/golden-cross.html
@@ -63,19 +63,19 @@
             <!-- container -->
             <div class="container text-center">
                 <p class="section-subtitle text-secondary"><strong>Django Application</strong></p>
-                <h6 class="section-title mb-6 text-light">Global Macro</h6>
+                <h6 class="section-title mb-6 text-light">MJ Cars</h6>
                 <!-- blog-wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/global-macro.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/golden-cross.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">Designed to offer a user-friendly and visually appealing interface that engages users with dynamic and interactive graphs.</h6>
-                        <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
-                            In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
+                        <h5 class="blog-card-title">This is a Python application that is designed to display trading signals based on a mathematical algorithm.</h6>
+                            <p><b>The algorithm determines the ideal time to buy or sell Bitcoin. The application fetches data from the Yahoo Finance API and calculates the current trend direction using a 252-day lookback period which is approximately one year.
+                                Once the calculations are complete, the results are presented in a user-friendly table format. This application is ideal for traders who are looking to make data-driven decisions when it comes to buying or selling Bitcoin. With the help of the algorithm, the application can analyze large amounts of data and provide recommendations on when to make a move.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/django_global_macro" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
+                        <a href="https://github.com/mjaroszewski1979/golden-cross-v1" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <h2>Features:</h2>
@@ -84,17 +84,15 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li><strong>Pandas-Datareader</strong> package makes it simple to access and read data from online sources such as the FRED API, and it guarantees accuracy when importing historical time series. </li>
+                                <li><strong>MailChimp</strong> is a powerful tool that allows us to easily create and manage email campaigns. With its user-friendly interface and extensive features, we can customize our emails and make them more engaging for our audience.</li>
                                 <br>
-                                <li><strong>Python's Threading Module</strong> enables developers to run multiple threads simultaneously within a program, providing faster and more efficient execution.</li>
+                                <li>The <strong>Technical Analysis Library</strong> is a powerful tool for those in the financial industry who need to analyze and manipulate large sets of financial data quickly and easily. This library offers advanced statistical tools and techniques.</li>
+                                <br>
+                                <li><strong>Pandas-Datareader</strong> package makes it simple to access and read data from online sources such as the FRED API, and it guarantees accuracy when importing historical time series.</li>
                                 <br>
                                 <li>Utilizing <strong>template inheritance mechanism</strong> to create a visually appealing and user-friendly interface. This involves building a base template with common elements and defining blocks that child templates can override, allowing for a consistent and easily modifiable design.</li>
                                 <br>
-                                <li><strong>HTMX</strong> is a user-friendly library that simplifies the creation of highly dynamic and interactive web applications without requiring the use of complex JavaScript or CSS frameworks.</li>
-                                <br>
-                                <li>To serve static files with high performance and efficiency, you can use <strong>WhiteNoise</strong> - a Python library that caches files in memory, compresses them on the fly, and can be configured to use HTTPS.</li>
-                                <br>
-                                <li><strong>Bokeh</strong> is an excellent Python library for creating visually appealing and easy-to-understand data visualizations, including line charts, bar plots, and hexagonal tiles for binned aggregations.</li>
+                                <li>Django's <strong>Cross-Site Request Forgery Protection</strong> works by using a unique token to validate each form submission on the server-side, and also includes other built-in security features like user authentication and authorization, password hashing, and SSL encryption to protect against common security threats.</li>
                                 <br>
                                 <li><strong>Breaking down logic into smaller parts</strong>: to achieve improved code organization, maintainability, and scalability, while also making it easier to debug and test individual parts of the codebase I have created smaller, focused Django applications within the project.</li>
                                 <br>
