--- a/live-projects.html
+++ b/live-projects.html
@@ -50,7 +50,7 @@
         </div>          
     </nav><!-- End of Page Navbar -->
 
-    <header id="home" class="header" style="background-image: url('assets/imgs/header-live.jpg');">
+    <header id="home" class="header" style="background-image: url('assets/imgs/header-alt.jpg');">
         <div class="overlay"></div>
         <div class="header-content container">
         </div>              
