--- a/geo-api.html
+++ b/geo-api.html
@@ -62,20 +62,20 @@
         <section class="section" id="blog">
             <!-- container -->
             <div class="container text-center">
-                <p class="section-subtitle text-secondary"><strong>Django Application</strong></p>
-                <h6 class="section-title mb-6 text-light">Global Macro</h6>
+                <p class="section-subtitle text-secondary"><strong>Django Rest Framework Application</strong></p>
+                <h6 class="section-title mb-6 text-light">Geo API</h6>
                 <!-- blog-wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/global-macro.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/geo-api.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">Designed to offer a user-friendly and visually appealing interface that engages users with dynamic and interactive graphs.</h6>
-                        <p><b>HTMX is a front-end technology that allows the application to provide a more engaging and responsive experience without sacrificing performance or simplicity. This technology enables the application to make asynchronous HTTP requests to the server to fetch data and update the UI accordingly, creating a seamless experience for the user.
-                            In addition to the HTMX functionality, this application also incorporates Bokeh, a powerful data visualization library that provides users with highly interactive and engaging graphs. Bokeh allows users to explore data in a visual way, providing more insight and making complex data sets more accessible. 
+                        <h5 class="blog-card-title">This project is built on the Django Rest Framework API platform and uses the JSON Web Token authentication mechanism to enable easy access to an IP geolocation database for Python applications. </h6>
+                            <p><b>By leveraging the power of the Django Rest Framework API and the convenience of JWT authentication, developers can quickly and easily create powerful applications that make use of IP geolocation data. 
+                                The Django Rest Framework API is a powerful tool for developers who want to create web APIs quickly and easily using the Django framework. With its built-in support for serialization, authentication, and validation, the Django Rest Framework API makes it easy for developers to create robust and secure APIs that can be used by a wide range of applications.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/django_global_macro" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
+                        <a href="https://github.com/mjaroszewski1979/geo_api_v1" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Github Readme</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <h2>Features:</h2>
@@ -84,25 +84,21 @@
                     <tbody>
                         <td>
                             <ul class="list-unstyled">
-                                <li><strong>Pandas-Datareader</strong> package makes it simple to access and read data from online sources such as the FRED API, and it guarantees accuracy when importing historical time series. </li>
+                                <li>With a wide range of customizable components and responsive design, <strong>Bulma</strong> makes it easy to create beautiful and functional web interfaces that work well on both desktop and mobile devices.</li>
                                 <br>
-                                <li><strong>Python's Threading Module</strong> enables developers to run multiple threads simultaneously within a program, providing faster and more efficient execution.</li>
+                                <li>This project has a strong and secure <strong>user authentication system</strong> that manages user accounts, cookies and sessions, and permissions, ensuring that users can access the resources they need while maintaining the security and integrity of the application.</li>
                                 <br>
-                                <li>Utilizing <strong>template inheritance mechanism</strong> to create a visually appealing and user-friendly interface. This involves building a base template with common elements and defining blocks that child templates can override, allowing for a consistent and easily modifiable design.</li>
-                                <br>
-                                <li><strong>HTMX</strong> is a user-friendly library that simplifies the creation of highly dynamic and interactive web applications without requiring the use of complex JavaScript or CSS frameworks.</li>
+                                <li>Django's <strong>Cross-Site Request Forgery Protection</strong> works by using a unique token to validate each form submission on the server-side, and also includes other built-in security features like user authentication and authorization, password hashing, and SSL encryption to protect against common security threats.</li>
                                 <br>
                                 <li>To serve static files with high performance and efficiency, you can use <strong>WhiteNoise</strong> - a Python library that caches files in memory, compresses them on the fly, and can be configured to use HTTPS.</li>
                                 <br>
-                                <li><strong>Bokeh</strong> is an excellent Python library for creating visually appealing and easy-to-understand data visualizations, including line charts, bar plots, and hexagonal tiles for binned aggregations.</li>
+                                <li><strong>JSON Web Token (JWT)</strong> is a widely used security mechanism that allows for the exchange of information between a client and server in a secure and reliable manner. It uses a cryptographic algorithm to sign sensitive data and ensures that it cannot be altered once it has been issued.</li>
                                 <br>
                                 <li><strong>Breaking down logic into smaller parts</strong>: to achieve improved code organization, maintainability, and scalability, while also making it easier to debug and test individual parts of the codebase I have created smaller, focused Django applications within the project.</li>
                                 <br>
                                 <li><strong>Writing most of the functionality in Django models or utility files instead of views</strong> to enhance application performance, as they are loaded only once when the application starts up, thus reducing loading and processing costs.</li>
                                 <br>
                                 <li>To ensure sensitive information is kept secure, we store API keys, database passwords, and other credentials in <strong>environment variables</strong>. </li>
-                                <br>
-                                <li>In Django, we can optimize tests by <strong>utilizing the setUp</strong> method to handle expensive setup operations for all tests within a module, which saves time and resources, and makes our tests more reliable. </li>
                                 <br>
                                 <li><strong>The page object pattern</strong> follows the DRY principle, minimizing code duplication, and creates an interface between web page elements and tests, resulting in more robust tests and better test organization.</li>
                             </ul>
