added two new blog posts

--- a/data-analysis.html
+++ b/data-analysis.html
@@ -98,7 +98,7 @@
                         <p><b>To achieve this, the user inputs their desired parameters, and the application accesses the historical data for those instruments. Once the data is accessed, the app calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages provide a helpful indicator of the trend direction for each instrument.
                             The beauty of FastAPI is that it is designed to be performant and easy to use. It's lightweight, so it can handle heavy loads without sacrificing speed. And its intuitive design means that developers can quickly create APIs with minimal code.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/stooq-api" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="stooq-api.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -111,7 +111,7 @@
                         <p><b>In fact, Django's ORM is just a pythonical way to create SQL to query and manipulate your database and get results in a pythonic fashion. In this particular case users are able to view different trading strategies and related financial markets. After completing the registration subscribers can login and are now able to create their own investment strategy. To delete records from the database users need to be added to special group and granted permissions by the website administrator.
                             Static files are served with WhiteNoise to accomplish high performance and efficiency without depending on nginx, Amazon S3 or any other external service.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/quant-catalog" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="quant-catalog.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -124,7 +124,7 @@
                         <p><b>Its main function is to present current direction for selected financial markets. After completing the registration process users are gaining access to multiple instruments. This website is using pandas-datareader to fetch historical data from FRED. Before results are being displayed application is calculating very simple 12-month momentum formula to determine actual trend.
                             One of the most noteworthy features of this application is a highly adaptable and scalable workflow for structuring and configuring a production-grade structure using flask blueprints and the application factory pattern.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/trend_follower_v1" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="trend-follower.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -137,7 +137,7 @@
                         <p><b>In fact, its speed is at par with Node.js and Go, it also creates plugins easily using dependency injection. The main function is to display current trend direction for 10 best high-yield dividend members of the Dow Jones Industrial Index included in Yahoo Finance's database. After receiving user input, application is gaining access to particular stock historical data by utilizing pandas-datareader. 
                             For password hashing, we can use Werkzeug Security to define functions that handle password hashing and checking if a password is correct.
                         </b></p>
-                        <a href="https://github.com/mjaroszewski1979/trend_follower_v1" class="blog-card-link" target="_blank">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="dogs-of-dow.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
     
